--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node index.js",
+    "test": "mocha --compilers js:babel-core/register  --require ./test/test_helper.js  --recursive",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -18,10 +20,19 @@
   },
   "homepage": "https://github.com/semljola/react-redux-d3#readme",
   "devDependencies": {
-    "babel-cli": "^6.1.2",
     "babel-core": "^6.1.2",
+    "babel-cli": "^6.1.2",
     "babel-preset-es2015": "^6.1.2",
-    "chai": "^3.4.0",
-    "mocha": "^2.3.3"
+    "chai": "^3.2.0",
+    "chai-immutable": "^1.3.0",
+    "mocha": "^2.2.5"
+  },
+  "dependencies": {
+    "immutable": "^3.7.4",
+    "redux": "^3.0.0",
+    "socket.io": "^1.3.6"
+  },
+  "babel": {
+    "presets": ["es2015"]
   }
 }
