--- a/package.json
+++ b/package.json
@@ -20,19 +20,21 @@
   },
   "homepage": "https://github.com/semljola/react-redux-d3#readme",
   "devDependencies": {
-    "babel-core": "^6.1.2",
     "babel-cli": "^6.1.2",
+    "babel-core": "^6.1.2",
     "babel-preset-es2015": "^6.1.2",
     "chai": "^3.2.0",
-    "chai-immutable": "^1.3.0",
+    "chai-immutable": "^1.5.2",
     "mocha": "^2.2.5"
   },
   "dependencies": {
-    "immutable": "^3.7.4",
+    "immutable": "^3.7.5",
     "redux": "^3.0.0",
     "socket.io": "^1.3.6"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   }
 }
